[package]
name = "lepasserelle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "lepasserelle"
crate-type = ["rlib"]

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
psutil.workspace = true
tokio.workspace = true

# MCP server dependencies
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
tokio-stream = "0.1"
futures-util = "0.3"

# CLI dependencies (will add in Phase 3)
# clap = { version = "4.5", features = ["derive"] }

# Configuration
toml = "0.8"

# File utilities
walkdir = "2.5"

# Internal dependencies
leparse = { path = "../leparse" }
legraphe = { path = "../legraphe" }
lerecherche = { path = "../lerecherche" }
lestockage = { path = "../lestockage" }

[dev-dependencies]
rstest.workspace = true
