[package]
name = "lepasserelle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "lepasserelle"
crate-type = ["rlib"]

[[bin]]
name = "leindex"
path = "src/bin/leindex.rs"

[features]
default = ["mcp-server"]
mcp-server = ["axum", "tower", "tower-http", "tokio-stream", "futures-util", "bytes", "http-body-util", "http"]

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
psutil.workspace = true
tokio.workspace = true

# MCP server dependencies (optional, gated by mcp-server feature)
# Downgraded to axum 0.6 to match libsql/tonic dependency
axum = { version = "0.6", features = ["json", "headers"], optional = true }
tower = { version = "0.4", features = ["full"], optional = true }
tower-http = { version = "0.4", features = ["cors", "trace", "limit"], optional = true }
tokio-stream = { version = "0.1", optional = true }
futures-util = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
http = { version = "1", optional = true }

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"

# Synchronization primitives
once_cell = "1"

# File utilities
walkdir = "2.5"
blake3 = "1.5"

# Cache spilling
bincode = "1.3"
lru = "0.12"

# Internal dependencies
leparse = { path = "../leparse" }
legraphe = { path = "../legraphe" }
lerecherche = { path = "../lerecherche" }
lestockage = { path = "../lestockage" }
lephase = { path = "../lephase" }

[dev-dependencies]
rstest.workspace = true
tempfile = "3.13"
