[package]
name = "lerecherche"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Semantic and hybrid search/ranking engine for LeIndex"
keywords = ["search", "semantic", "ranking", "vector"]
categories = ["algorithms", "development-tools"]

[dependencies]
# Workspace dependencies
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# External dependencies
regex = "1.10"
once_cell = "1.19"
unicode-normalization = "0.1"
hnsw_rs = "0.1.0"
lru = "0.12"

# Internal dependencies
leparse = { path = "../leparse", version = "0.1.0" }
legraphe = { path = "../legraphe", version = "0.1.0" }
lestockage = { path = "../lestockage", version = "0.1.0" }

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true }
rand = "0.8"

[lib]
name = "lerecherche"
crate-type = ["rlib"]
