[package]
name = "lestockage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true

# Storage dependencies
rusqlite = { version = "0.32", features = ["bundled"] }
blake3.workspace = true

# Turso/libsql for vector store
libsql = "0.5.0"
rusqlite_migration = "1.0.0"

# Internal dependencies
leparse = { path = "../leparse" }
legraphe = { path = "../legraphe" }

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true

[lib]
name = "lestockage"
crate-type = ["rlib"]
