[package]
name = "levalidation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
tree-sitter.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
petgraph.workspace = true

# Internal dependencies
leparse = { path = "../leparse" }
lestockage = { path = "../lestockage" }
legraphe = { path = "../legraphe" }

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
