[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

# Inherits workspace lint policy from the root Cargo.toml
# `[workspace.lints.clippy]` table (replaces the legacy clippy.toml arrays).
[lints]
workspace = true
