[package]
name = "maestro-leindex"
version = "0.1.0"
edition = "2021"
description = "Database migration framework for SQLite/DuckDB/Tantivy to Turso"
authors = ["Maestro Team"]

[dependencies]
# Core dependencies
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
libsql = { version = "0.4", features = ["hrana"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8"

[lib]
path = "src/lib.rs"

[[bin]]
name = "maestro-leindex"
path = "src/main.rs"

[profile.dev]
opt-level = 0
