[package]
name = "leglobal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
blake3.workspace = true
chrono.workspace = true

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# File system traversal
walkdir = "2"

# File watching for background sync
notify = "6.0"

# Process execution for discovery tools
tokio-process = "0.2"

# Internal dependencies
lestockage = { path = "../lestockage" }

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true

[lib]
name = "leglobal"
crate-type = ["rlib"]
