[package]
name = "leparse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
tree-sitter.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
once_cell = "1.19"

# Language-specific grammars (lazy-loaded)
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-c = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-json = "0.23"
# tree-sitter-swift = "0.7.1"
# tree-sitter-kotlin = "0.3.8"
# tree-sitter-dart = "0.0.4"
tree-sitter-lua = "0.2"
tree-sitter-scala = "0.24"
# Additional grammars for future expansion
# tree-sitter-elixir = "0.1"
# tree-sitter-haskell = "0.21"

[dev-dependencies]
rstest.workspace = true
tempfile = "3.13"

[lib]
name = "leparse"
crate-type = ["rlib"]
