[package]
name = "lephase"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
blake3.workspace = true
walkdir = "2.5"

leparse = { path = "../leparse" }
legraphe = { path = "../legraphe" }
lerecherche = { path = "../lerecherche" }
lestockage = { path = "../lestockage" }

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "phase_bench"
harness = false

[lib]
name = "lephase"
crate-type = ["rlib"]
